--- a/app/config/parts/services.neon
+++ b/app/config/parts/services.neon
@@ -8,6 +8,10 @@ services:
     - Base\BaseForm
     - Base\BaseGrid
 
+    - AdminModule\Grids\DeviceGrid
+    - AdminModule\Forms\DeviceForm
+    - Repository\Device
+
     - Forms\LoginForm
 
     - Authenticator\Authenticator
