--- a/app/config/parts/services.neon
+++ b/app/config/parts/services.neon
@@ -17,6 +17,10 @@ services:
     - AdminModule\Grids\PlaceGrid
     - Repository\Place
 
+    - AdminModule\Forms\VisitorForm
+    - AdminModule\Grids\VisitorGrid
+    - Repository\Visitor
+
     - Forms\LoginForm
     - Authenticator\Authenticator
 
